--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -265,6 +265,7 @@
     <ClCompile Include="..\..\src\RSP.cpp" />
     <ClCompile Include="..\..\src\ShaderUtils.cpp" />
     <ClCompile Include="..\..\src\TextDrawer.cpp" />
+    <ClCompile Include="..\..\src\TextureFilterHandler.cpp" />
     <ClCompile Include="..\..\src\Textures.cpp" />
     <ClCompile Include="..\..\src\Turbo3D.cpp" />
     <ClCompile Include="..\..\src\VI.cpp" />
@@ -345,6 +346,7 @@
     <ClInclude Include="..\..\src\RSP.h" />
     <ClInclude Include="..\..\src\ShaderUtils.h" />
     <ClInclude Include="..\..\src\TextDrawer.h" />
+    <ClInclude Include="..\..\src\TextureFilterHandler.h" />
     <ClInclude Include="..\..\src\Textures.h" />
     <ClInclude Include="..\..\src\Turbo3D.h" />
     <ClInclude Include="..\..\src\Types.h" />
