--- a/projects/msvc12/GLideN64.vcxproj.filters
+++ b/projects/msvc12/GLideN64.vcxproj.filters
@@ -233,6 +233,9 @@
     <ClCompile Include="..\..\src\DepthBufferRender\DepthBufferRender.cpp">
       <Filter>Source Files\DepthBufferRender</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\FBOTextureFormats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\3DMath.h">
@@ -417,6 +420,9 @@
     </ClInclude>
     <ClInclude Include="..\..\src\DepthBufferRender\DepthBufferRender.h">
       <Filter>Header Files\DepthBufferRender</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\FBOTextureFormats.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
