Enable Framebuffer Emulation on the Raspberry Pi renderbuffer code was written by gonetz, not me

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -64,6 +64,7 @@ if(EXISTS "/opt/vc/include/bcm_host.h")
   set(GLES2 ON)
   add_definitions(
     -DVC
+    -DUSE_DEPTH_RENDERBUFFER
   )
   include_directories(
     "/opt/vc/include"
