--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -1,6 +1,6 @@
 ; Custom game settings
 [General]
-version=11
+version=12
 
 [TWINE]
 Good_Name=007 - The World Is Not Enough (E)(U)
@@ -54,11 +54,6 @@ frameBufferEmulation\copyDepthToRDRAM=1
 [BIOFREAKS]
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\detectCFB=1
-
-[BIOHAZARD%20II]
-Good_Name=Biohazard 2 (J)
-frameBufferEmulation\detectCFB=1
 
 [52150A67]
 Good_Name=Bokujou Monogatari 2 (J)
@@ -95,25 +90,21 @@ Good_Name=Densha de Go! 64 (J)
 [DONALD%20DUCK%20GOIN%27%20QU]
 Good_Name=Donald Duck - Goin' Quackers (U)
 frameBufferEmulation\copyToRDRAM=2
-frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [DONALD%20DUCK%20QUACK%20AT]
 Good_Name=Donald Duck - Quack Attack (E)
 frameBufferEmulation\copyToRDRAM=2
-frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [DONKEY%20KONG%2064]
 Good_Name=Donkey Kong 64 (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [D%20K%20DISPLAY]
 Good_Name=Donkey Kong 64 Kiosk Demo (U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [72390C86]
@@ -184,7 +175,6 @@ frameBufferEmulation\copyToRDRAM=1
 [HEXEN]
 Good_Name=Hexen (E)(F)(G)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\detectCFB=1
 
 [30AB07E1]
 Good_Name=Hiryuu No Ken Twin (J)
@@ -233,7 +223,6 @@ Good_Name=Kiratto Kaiketsu! 64 Tanteidan (J)
 [LEGORACERS]
 Good_Name=Lego Racers (E)(U)
 frameBufferEmulation\copyToRDRAM=2
-frameBufferEmulation\detectCFB=1
 
 [76910A78]
 Good_Name=Mahjong Hourouki Classic (J)
@@ -279,10 +268,6 @@ frameBufferEmulation\copyToRDRAM=2
 [293D0695]
 Good_Name=Morita Shougi 64 (J)
 
-[MS.%20PAC-MAN%20MM]
-Good_Name=Ms. Pac-Man - Maze Madness (U)
-frameBufferEmulation\detectCFB=1
-
 [14B30473]
 Good_Name=Nushi Duri 64 (J)
 
@@ -301,10 +286,6 @@ frameBufferEmulation\copyToRDRAM=0
 Good_Name=Perfect Dark (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
-
-[PUZZLE%20LEAGUE%20N64]
-Good_Name=Pokemon Puzzle League (E)(F)(G)(U)
-frameBufferEmulation\detectCFB=1
 
 [POKEMON%20SNAP]
 Good_Name=Pokemon Snap (U)
@@ -329,11 +310,6 @@ frameBufferEmulation\copyToRDRAM=2
 [RAYMAN%202]
 Good_Name=Rayman 2 - The Great Escape (E)(U)
 frameBufferEmulation\copyToRDRAM=2
-frameBufferEmulation\detectCFB=1
-
-[RESIDENT%20EVIL%20II]
-Good_Name=Resident Evil 2 (E)(U)
-frameBufferEmulation\detectCFB=1
 
 [437009B9]
 Good_Name=Saikyou Habu Shougi (J)
@@ -349,13 +325,8 @@ Good_Name=Snobow Kids (J)
 Good_Name=Space Invaders (U)
 frameBufferEmulation\copyToRDRAM=0
 
-[STARCRAFT%2064]
-Good_Name=Star Craft 64 (E)(G)(U)
-frameBufferEmulation\detectCFB=1
-
 [75DA0AC4]
-Good_Name=Star Craft 64 (U)
-frameBufferEmulation\detectCFB=1
+Good_Name=Star Craft 64 (J)
 
 [STAR%20TWINS]
 ; See Jet Force Gemini for notes
@@ -388,12 +359,10 @@ frameBufferEmulation\copyDepthToRDRAM=1
 
 [THE%20LEGEND%20OF%20ZELDA]
 Good_Name=The Legend Of Zelda - Ocarina Of Time (E)(U) / Zelda No Densetsu - Toki No Ocarina (J)
-frameBufferEmulation\detectCFB=0
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [ZELDA%20MASTER%20QUEST]
 Good_Name=The Legend Of Zelda - Ocarina Of Time - Master Quest
-frameBufferEmulation\detectCFB=0
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [TIGGER%27S%20HONEY%20HUNT]
@@ -403,7 +372,6 @@ frameBufferEmulation\N64DepthCompare=1
 [TONIC%20TROUBLE]
 Good_Name=Tonic Trouble (E)(U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\detectCFB=1
 
 [48460A35]
 Good_Name=Ucchan Nanchan No Hono No Challenger - Denryuu Ira Ira Bou (J)
