--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -8,7 +8,6 @@ frameBufferEmulation\N64DepthCompare=1
 
 [1080%20SNOWBOARDING]
 Good_Name=1080 Snowboarding (E)(JU)
-frameBufferEmulation\copyToRDRAM=2
 
 [6D120CBF]
 Good_Name=64 De Hakken!! Tamagotchi - Minna De Tamagotchi World (J)
@@ -30,23 +29,18 @@ Good_Name=Bakushou Jinsei 64 - Mezase! Resort Ou (J)
 
 [BANJO-KAZOOIE]
 Good_Name=Banjo-Kazooie (E)(U) / Banjo To Kazooie No Daibouken (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [BANJO%20KAZOOIE%202]
 Good_Name=Banjo to Kazooie no Daibouken 2 (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [BANJO%20TOOIE]
 Good_Name=Banjo-Tooie (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [BEETLE%20ADVENTURE%20RAC]
 Good_Name=Beetle Adventure Racing (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [BEETLE%20ADVENTURE%20JP]
 Good_Name=Beetle Adventure Racing (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [BIOFREAKS]
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
@@ -64,7 +58,6 @@ Good_Name=Choro Q 64 2 - Hacha Mecha Grand Prix Race (J)
 
 [CASTLEVANIA]
 Good_Name=Castlevania (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [CASTLEVANIA2]
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
@@ -78,18 +71,14 @@ Good_Name=Chou Snobow Kids (J)
 
 [CONKER%20BFD]
 Good_Name=Conker's Bad Fur Day (E)(U)
-frameBufferEmulation\copyToRDRAM=2
-
 [362D06B6]
 Good_Name=Densha de Go! 64 (J)
 
 [DONALD%20DUCK%20GOIN%27%20QU]
 Good_Name=Donald Duck - Goin' Quackers (U)
-frameBufferEmulation\copyToRDRAM=2
 
 [DONALD%20DUCK%20QUACK%20AT]
 Good_Name=Donald Duck - Quack Attack (E)
-frameBufferEmulation\copyToRDRAM=2
 
 [DONKEY%20KONG%2064]
 Good_Name=Donkey Kong 64 (E)(J)(U)
@@ -136,8 +125,6 @@ frameBufferEmulation\copyToRDRAM=1
 
 [F-ZERO%20X]
 Good_Name=F-Zero X (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=2
-
 [18000458]
 Good_Name=Famista 64 (J)
 
@@ -170,7 +157,6 @@ Good_Name=Hiryuu No Ken Twin (J)
 
 [HSV%20ADVENTURE%20RACING]
 Good_Name=HSV Adventure Racing (A)
-frameBufferEmulation\copyToRDRAM=2
 
 [83CA0DCA]
 Good_Name=Ide Yousuke No Mahjong Juku (J)
@@ -210,7 +196,6 @@ Good_Name=Kiratto Kaiketsu! 64 Tanteidan (J)
 
 [LEGORACERS]
 Good_Name=Lego Racers (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [76910A78]
 Good_Name=Mahjong Hourouki Classic (J)
@@ -221,34 +206,27 @@ frameBufferEmulation\N64DepthCompare=1
 
 [MARIOGOLF64]
 Good_Name=Mario Golf (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [MARIOKART64]
 Good_Name=Mario Kart 64 (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [2B6D07C8]
 Good_Name=Mario No Photopi (J)
 
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [MARIOTENNIS]
 Good_Name=Mario Tennis (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [MARIOTENNIS64]
 Good_Name=Mario Tennis 64 (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [MICKEY%20USA%20PAL]
 Good_Name=Mickey's Speedway USA (E)
-frameBufferEmulation\copyToRDRAM=2
 
 [MICKEY%20USA]
 Good_Name=Mickey's Speedway USA (U) / Mickey No Racing Challenge USA (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [293D0695]
 Good_Name=Morita Shougi 64 (J)
@@ -261,7 +239,6 @@ Good_Name=Nushi Duri 64 - Shiokaze Ni Notte (J)
 
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [PENNY%20RACERS]
 Good_Name=Penny Racers (E)(U)
@@ -269,7 +246,6 @@ frameBufferEmulation\copyToRDRAM=0
 
 [PERFECT%20DARK]
 Good_Name=Perfect Dark (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [POKEMON%20SNAP]
 Good_Name=Pokemon Snap (U)
@@ -289,11 +265,9 @@ frameBufferEmulation\copyToRDRAM=0
 [QUAKE%20II]
 Good_Name=Quake II (U)
 ; set to 1 for correct HUD in pause menu
-frameBufferEmulation\copyToRDRAM=2
 
 [RAYMAN%202]
 Good_Name=Rayman 2 - The Great Escape (E)(U)
-frameBufferEmulation\copyToRDRAM=2
 
 [437009B9]
 Good_Name=Saikyou Habu Shougi (J)
@@ -304,6 +278,10 @@ frameBufferEmulation\copyToRDRAM=0
 
 [1C500641]
 Good_Name=Snobow Kids (J)
+
+[SHADOWMAN]
+Good_Name=Shadow Man (B)(E)(F)(G)(U)
+frameBufferEmulation\copyDepthToRDRAM=0
 
 [SPACE%20INVADERS]
 Good_Name=Space Invaders (U)
@@ -329,11 +307,9 @@ Good_Name=Susume! Taisen Puzzle Dama - Toukon! Marutama Chou (J)
 
 [ZELDA%20MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask (E)(U) / Zelda No Densetsu - Mujura No Karmen (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask Demo (U)
-frameBufferEmulation\copyToRDRAM=2
 
 [THE%20LEGEND%20OF%20ZELDA]
 Good_Name=The Legend Of Zelda - Ocarina Of Time (E)(U) / Zelda No Densetsu - Toki No Ocarina (J)
@@ -366,7 +342,6 @@ Good_Name=WWF Wrestlemania 2000 (J)
 
 [THE%20MASK%20OF%20MUJURA]
 Good_Name=Zelda No Densetsu - Mujura No Karmen (J)
-frameBufferEmulation\copyToRDRAM=2
 
 [7BC50D43]
 Good_Name=Zool - Majuu Tsukai Densetsu (J)
